<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:divider="@drawable/appwidget_divider"
	android:orientation="horizontal"
	android:showDividers="middle" >

	<ImageView
		android:id="@+id/widget_app_icon"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_marginLeft="12dp"
		android:contentDescription="@string/app_name"
		android:src="@mipmap/ic_app_color"
		android:visibility="gone" />

	<LinearLayout
		android:id="@+id/widget_button_balance"
		android:layout_width="0px"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:layout_weight="3"
		android:background="@drawable/appwidget_button_left"
		android:focusable="true"
		android:gravity="left|center_vertical"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:orientation="horizontal" >

			<ImageView
				android:id="@+id/widget_wallet_prefix"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" />

			<TextView
				android:id="@+id/widget_wallet_balance_btc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4sp"
				android:ellipsize="none"
				android:fadingEdge="horizontal"
				android:fadingEdgeLength="12dp"
				android:maxLines="1"
				android:textColor="@color/fg_network_significant"
				android:textSize="@dimen/font_size_large" />
		</LinearLayout>

		<TextView
			android:id="@+id/widget_wallet_balance_local"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:ellipsize="none"
			android:fadingEdge="horizontal"
			android:fadingEdgeLength="12dp"
			android:maxLines="1"
			android:textColor="@color/fg_network_insignificant"
			android:textSize="@dimen/font_size_normal" />
	</LinearLayout>

	<Button
		android:id="@+id/widget_button_request"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:minWidth="150sp"
		android:background="@drawable/button_background_alt"
		android:text="@string/button_request_coins"
		android:textAllCaps="true" />

	<Button
		android:id="@+id/widget_button_send"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:minWidth="150sp"
		android:background="@drawable/button_background"
		android:text="@string/button_send_coins"
		android:textAllCaps="true" />

	<ImageButton
		android:id="@+id/widget_button_send_qr"
		android:layout_width="0px"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@drawable/appwidget_button_right"
		android:contentDescription="@string/button_scan"
		android:src="@drawable/ic_photo_camera_white_24dp" />

</LinearLayout>